syntax = "proto3";
package tenant;

import "google/protobuf/timestamp.proto";

message TenantRequest {
    string id = 1;
}

message TenantResponse {
    string id = 1;
    string name = 2;
    string alias = 3;
    string email = 4;
    string code = 5;
    string address = 6;
    string contactNumber = 7;
    string avatar = 8;
    bool isActive = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

service TenantService {
    rpc GetTenantByID (TenantRequest) returns (TenantResponse) {};
}